<?xml version="1.0"?>
<package format="2">
  <name>cpp_can_parser</name>
  <version>0.0.1</version>
  <description>The cpp_can_parser package</description>

  <maintainer email="ryodo.tanaka@arav.jp">RyodoTanaka</maintainer>
  
  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>socketcan_interface</depend>
  
  <!-- <depend>std_msgs</depend> -->
  <!-- <depend>sensor_msgs</depend> -->
  <!-- <depend>geometry_msgs</depend> -->
  <!-- <depend>trajectory_msgs</depend> -->
  <!-- <depend>radial_menu_msgs</depend> -->
  <!-- <depend>radial_menu_model</depend> -->
  <!-- <depend>moveit_core</depend> -->
  <!-- <depend>moveit_ros_planning</depend> -->
  <!-- <depend>moveit_ros_planning_interface</depend> -->
  <!-- <depend>moveit_msgs</depend> -->
  <!-- <depend>moveit_visual_tools</depend> -->
  <!-- <depend>tf2</depend> -->
  
  <!-- <exec_depend>rviz</exec_depend> -->

  <test_depend>roslaunch</test_depend>
  <test_depend>rviz</test_depend>

</package>
